--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,31 @@
 /* Base Application Styles */
 body {
-  color: #fff;
-  background: #222;
+  background-color: #ecf0f1;
+  padding-top: 5vh;
+  color: #2980b9;
+  text-decoration: none;
+}
+
+.studentList{
+  list-style-type: none;
+  font-size: 24px;
+  font-family: sans-serif;
+  line-height: 200%;
+  color: #2980b9;
+}
+
+.videoBackground {
+  background-color: #efefef;
+  padding: 20px;
+  margin-bottom: 20px;
+  max-width: 1268px;
+  max-height: 712px;
+  margin: 0 auto;
+}
+
+.videoContainer{
+  width: auto;
+  height: 100%;
 }
 
 .index img {
